Auto screen mode (#9)
* Fix FullScreenMode in Android 14

* Fix FullScreenMode in Android 14

* hehe

* hehe

* huhu

* feat translate Cropscreen

* PartialScreen

* complete AutoScreenMode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,12 @@
         <service
             android:name=".feature_bubble_translation.presentation.service.AudioModeService"
             android:exported="false"
-            android:foregroundServiceType="mediaProjection" />
+            android:foregroundServiceType="mediaProjection"/>
+        <service
+            android:name=".feature_bubble_translation.presentation.service.AutoScreenModeService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="mediaProjection"/>
     </application>
 
 </manifest>
