--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,6 @@ activityKtx = "1.10.1"
 agp = "8.8.1"
 cameraCore = "1.4.2"
 coilCompose = "2.2.2"
-constraintlayoutCompose = "1.1.1"
 datastorePreferences = "1.1.4"
 koinAndroid = "3.5.3"
 koinAndroidxCompose = "3.5.3"
@@ -27,6 +26,8 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.10.1"
 voskAndroid = "0.3.47"
+constraintlayoutCompose = "1.1.1"
+composeTesting = "1.0.0-alpha04"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
@@ -69,6 +70,7 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
 text-recognition = { module = "com.google.mlkit:text-recognition", version.ref = "textRecognition" }
 translate = { module = "com.google.mlkit:translate", version.ref = "translate" }
+androidx-compose-testing = { group = "androidx.xr.compose", name = "compose-testing", version.ref = "composeTesting" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
