fix: add apikey in local.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+#API_KEY=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
