--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ materialIconsExtended = "1.7.8"
 navigationCompose = "2.7.7"
 lifecycleRuntimeComposeAndroid = "2.8.7"
 ktorVersion = "3.1.2"
+roomRuntime = "2.7.1"
 textRecognition = "16.0.1"
 translate = "17.0.3"
 cameraView = "1.4.2"
@@ -52,6 +53,8 @@ androidx-graphics-shapes = { module = "androidx.graphics:graphics-shapes", versi
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil-compose-v250 = { module = "io.coil-kt:coil-compose", version.ref = "coilComposeVersion" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coilComposeVersion" }
